fixed search bar alignment in header

--- a/css/app.css
+++ b/css/app.css
@@ -595,7 +595,7 @@ margin-bottom: 8px;
     }
     #searchform {
         float: right;
-        margin-top: 30px;
+        margin-top: 50px;
     }
 }
 
